--- a/KMPRazorMix/KMPRazorMix.csproj
+++ b/KMPRazorMix/KMPRazorMix.csproj
@@ -67,9 +67,11 @@
   <ItemGroup>
     <Content Include="content\style.css">
       <DependentUpon>style.less</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="content\style.min.css">
       <DependentUpon>style.less</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Global.asax" />
     <Content Include="MarkdownSharp.dll" />
@@ -93,7 +95,9 @@
     <Content Include="blank_template\Template.cshtml" />
     <Content Include="Servers.cshtml" />
     <Content Include="Readme.cshtml" />
-    <Content Include="content\style.less" />
+    <Content Include="content\style.less">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="FAQ.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
