--- a/KMPRazorMix/Web.config
+++ b/KMPRazorMix/Web.config
@@ -10,5 +10,18 @@
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
     </system.web>
-
+  <system.webServer>
+    <httpErrors errorMode="Custom">
+      <clear/>
+      <error statusCode="401" prefixLanguageFilePath="" path="/Error.cshtml?err=401" responseMode="ExecuteURL" />
+      <error statusCode="403" prefixLanguageFilePath="" path="/Error.cshtml?err=403" responseMode="ExecuteURL" />
+      <error statusCode="404" prefixLanguageFilePath="" path="/Error.cshtml?err=404" responseMode="ExecuteURL" />
+      <error statusCode="405" prefixLanguageFilePath="" path="/Error.cshtml?err=405" responseMode="ExecuteURL" />
+      <error statusCode="406" prefixLanguageFilePath="" path="/Error.cshtml?err=406" responseMode="ExecuteURL" />
+      <error statusCode="412" prefixLanguageFilePath="" path="/Error.cshtml?err=412" responseMode="ExecuteURL" />
+      <error statusCode="500" prefixLanguageFilePath="" path="/Error.cshtml?err=500" responseMode="ExecuteURL" />
+      <error statusCode="501" prefixLanguageFilePath="" path="/Error.cshtml?err=501" responseMode="ExecuteURL" />
+      <error statusCode="502" prefixLanguageFilePath="" path="/Error.cshtml?err=502" responseMode="ExecuteURL" />
+    </httpErrors>
+  </system.webServer>
 </configuration>
