--- a/KMPRazorMix/Web.config
+++ b/KMPRazorMix/Web.config
@@ -23,5 +23,31 @@
       <error statusCode="501" prefixLanguageFilePath="" path="/Error.cshtml?err=501" responseMode="ExecuteURL" />
       <error statusCode="502" prefixLanguageFilePath="" path="/Error.cshtml?err=502" responseMode="ExecuteURL" />
     </httpErrors>
+    <httpCompression>
+      <scheme name="gzip" dll="%Windir%\system32\inetsrv\gzip.dll"/>
+      <dynamicTypes>
+        <add mimeType="text/*" enabled="true"/>
+        <add mimeType="message/*" enabled="true"/>
+        <add mimeType="application/javascript" enabled="true"/>
+        <add mimeType="*/*" enabled="false"/>
+      </dynamicTypes>
+      <staticTypes>
+        <add mimeType="text/*" enabled="true"/>
+        <add mimeType="message/*" enabled="true"/>
+        <add mimeType="application/javascript" enabled="true"/>
+        <add mimeType="*/*" enabled="false"/>
+      </staticTypes>
+    </httpCompression>
+    <defaultDocument>
+      <files>
+        <clear />
+        <add value="Index" />
+      </files>
+    </defaultDocument>
+    <caching enabled="true" enableKernelCache="true">
+      <profiles>
+        <add extension=".aspx" policy="DontCache" kernelCachePolicy="CacheForTimePeriod" duration="00:07:30" />
+      </profiles>
+    </caching>
   </system.webServer>
 </configuration>
