--- a/KMPRazorMix/Web.config
+++ b/KMPRazorMix/Web.config
@@ -6,6 +6,9 @@
   -->
 
 <configuration>
+  <system.web>
+    <customErrors mode="Off"/>
+  </system.web>
     <system.web>
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
