--- a/KMPRazorMix/Web.config
+++ b/KMPRazorMix/Web.config
@@ -7,12 +7,11 @@
 
 <configuration>
   <system.web>
-    <customErrors mode="Off"/>
+    <customErrors defaultRedirect="/Error.cshtml" mode="RemoteOnly">
+    </customErrors>
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />
   </system.web>
-    <system.web>
-      <compilation debug="true" targetFramework="4.5" />
-      <httpRuntime targetFramework="4.5" />
-    </system.web>
   <system.webServer>
     <httpErrors errorMode="Custom">
       <clear/>
