--- a/KMPRazorMix/Web.config
+++ b/KMPRazorMix/Web.config
@@ -13,6 +13,11 @@
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.webServer>
+    <caching enabled="true" enableKernelCache="true">
+      <profiles>
+        <add extension=".cshtml" policy="DontCache" kernelCachePolicy="CacheForTimePeriod" duration="00:02:30" />
+      </profiles>
+    </caching>
     <httpErrors errorMode="Custom">
       <clear/>
       <error statusCode="401" prefixLanguageFilePath="" path="/Error.cshtml?err=401" responseMode="ExecuteURL" />
