--- a/KMPRazorMix/KMPRazorMix.csproj
+++ b/KMPRazorMix/KMPRazorMix.csproj
@@ -66,6 +66,7 @@
     <Reference Include="WebMatrix.Data, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="content\github.png" />
     <Content Include="content\kmpclient.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
