--- a/KMPRazorMix/KMPRazorMix.csproj
+++ b/KMPRazorMix/KMPRazorMix.csproj
@@ -43,6 +43,9 @@
       <HintPath>.\MarkdownSharp.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="RestSharp">
+      <HintPath>..\packages\RestSharp.104.4.0\lib\net4\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -331,7 +334,9 @@
     <Content Include="content\favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="MarkdownSharp.dll" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="backend\API\ServerList.ashx.cs">
@@ -340,6 +345,7 @@
     <Compile Include="backend\API\Server.ashx.cs">
       <DependentUpon>Server.ashx</DependentUpon>
     </Compile>
+    <Compile Include="backend\DB.cs" />
     <Compile Include="backend\GeoData.cs" />
     <Compile Include="backend\KMP.cs" />
     <Compile Include="backend\Server.cs" />
@@ -367,15 +373,20 @@
     <Content Include="backend\API\ServerList.ashx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <Content Include="_Layout.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'DBTest|AnyCPU'">
+    <OutputPath>bin\</OutputPath>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
