--- a/KMPRazorMix/Web.Debug.config
+++ b/KMPRazorMix/Web.Debug.config
@@ -3,17 +3,9 @@
 <!-- For more information on using web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--
-    In the example below, the "SetAttributes" transform will change the value of 
-    "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
-    finds an attribute "name" that has a value of "MyDB".
-    
-    <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
-  -->
+  <appSettings xdt:Transform="Insert" >
+    <add key="CLOUDANT_URL" value="https://db609b40-19d5-41d3-b771-fee45488fe5b.appharbor:LweIJHqff5ceUVm5DvRtReqs@db609b40-19d5-41d3-b771-fee45488fe5b.appharbor.cloudant.com"/>
+  </appSettings>
   <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire 
